--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -2,10 +2,32 @@
   <mat-card-title>People</mat-card-title>
   <mat-form-field floatLabel="always" appearance="outline">
     <mat-label>Name</mat-label>
-    <input matInput required placeholder="Name" [(ngModel)]="name" />
+    <input
+      type="text"
+      matInput
+      required
+      placeholder="Name"
+      [(ngModel)]="name"
+      #nameInput="ngModel"
+    />
+    <button
+      mat-button
+      *ngIf="name"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="name = ''"
+    >
+      <mat-icon>close</mat-icon>
+    </button>
   </mat-form-field>
 
-  <button mat-flat-button color="primary" (click)="addPerson(name)">
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="addPerson(name)"
+    [disabled]="nameInput.invalid"
+  >
     Add Person
   </button>
 
