--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -31,7 +31,13 @@
     Add Person
   </button>
 
+  <div>
+    <button mat-flat-button color="warn" (click)="clearAll()">Clear All</button>
+  </div>
+
   <mat-list>
-    <mat-list-item *ngFor="let person of people">{{ person }}</mat-list-item>
+    <mat-list-item *ngFor="let person of people" matbadge="x">{{
+      person
+    }}</mat-list-item>
   </mat-list>
 </mat-card>
