--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -9,6 +9,7 @@
       required
       [(ngModel)]="name"
       #nameInput="ngModel"
+      (keyup.enter)="addPerson(name)"
     />
     <button
       mat-button
