--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -44,12 +44,9 @@
   </div>
 
   <mat-list>
-    <mat-list-item
-      *ngFor="let person of people; let i = index"
-      (click)="deleteName(i)"
-    >
+    <mat-list-item *ngFor="let person of people; let i = index">
       <p>{{ person }}</p>
-      <mat-icon>clear</mat-icon>
+      <mat-icon (click)="deleteName(i)">clear</mat-icon>
     </mat-list-item>
   </mat-list>
 </mat-card>
