--- a/src/app/receipt-items/receipt-items.component.html
+++ b/src/app/receipt-items/receipt-items.component.html
@@ -1,8 +1,73 @@
 <mat-card>
   <mat-card-title>Receipt</mat-card-title>
-  <ul>
-    <li *ngFor="let person of people">
-      {{ person }}
-    </li>
-  </ul>
+
+  <mat-form-field floatLabel="auto" appearance="standard">
+    <mat-label>Name of Item</mat-label>
+    <input
+      type="text"
+      matInput
+      required
+      [(ngModel)]="item"
+      #itemInput="ngModel"
+    />
+    <button
+      mat-button
+      *ngIf="item"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="item = ''"
+    >
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <mat-form-field floatLabel="auto" appearance="standard">
+    <mat-label>Price of Item</mat-label>
+    <input
+      class="no-spin"
+      type="number"
+      matInput
+      required
+      [(ngModel)]="itemPrice"
+      #itemPriceInput="ngModel"
+    />
+    <button
+      mat-button
+      *ngIf="itemPrice"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="itemPrice = ''"
+    >
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="addItem(item, itemPrice)"
+    [disabled]="itemInput.invalid || itemPriceInput.invalid"
+  >
+    Add Item
+  </button>
+
+  <div>
+    <button
+      mat-flat-button
+      color="warn"
+      (click)="clearAll()"
+      [matBadge]="items.length"
+    >
+      Clear All Items
+    </button>
+  </div>
+
+  <mat-list>
+    <mat-list-item *ngFor="let it of items; let i = index">
+      <p>{{ it.name }} {{ it.price }}</p>
+      <mat-icon (click)="deleteItem(i)">clear</mat-icon>
+    </mat-list-item>
+  </mat-list>
 </mat-card>
