--- a/src/app/receipt-items/receipt-items.component.scss
+++ b/src/app/receipt-items/receipt-items.component.scss
@@ -1,3 +1,22 @@
 mat-card {
-  width: 350px;
+  max-width: 350px;
+}
+
+button {
+  margin-left: 10px;
+}
+
+mat-form-field {
+  width: 200px;
+}
+
+mat-icon {
+  cursor: pointer;
+}
+
+.no-spin::-webkit-inner-spin-button,
+.no-spin::-webkit-outer-spin-button {
+  -webkit-appearance: none !important;
+  margin: 0 !important;
+  -moz-appearance: textfield !important;
 }
