--- a/src/app/receipt-items/receipt-items.component.scss
+++ b/src/app/receipt-items/receipt-items.component.scss
@@ -20,3 +20,7 @@ mat-icon {
   margin: 0 !important;
   -moz-appearance: textfield !important;
 }
+
+.clear-all-button-container {
+  margin-bottom: 15px;
+}
