--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 .main {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+
+mat-card {
+  width: 350px;
 }
 
 button {
