--- a/src/app/receipt-items/receipt-items.component.scss
+++ b/src/app/receipt-items/receipt-items.component.scss
@@ -2,9 +2,9 @@ mat-card {
   max-width: 350px;
 }
 
-mat-form-field {
-  width: 200px;
-}
+// mat-form-field {
+//   width: 200px;
+// }
 
 mat-icon {
   cursor: pointer;
