--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -1,17 +1,15 @@
-mat-card {
-  width: 350px;
-}
-
-mat-form-field {
-  width: 200px;
-}
-
 mat-icon {
   cursor: pointer;
 }
 
-.main-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
+button {
+  margin-left: 10px;
+  height: 40px;
+  width: 150px;
+}
+
+.clear-button-and-list {
+  display: grid;
+  grid-template-columns: 180px auto;
+  align-items: end;
 }
