Fix color of input field bug

--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -1,5 +1,6 @@
 mat-icon {
   cursor: pointer;
+  color: white;
 }
 
 button {
@@ -12,4 +13,8 @@ button {
   display: grid;
   grid-template-columns: 180px auto;
   align-items: end;
+}
+
+mat-form-field {
+  width: 200px;
 }
