Tidy up receipt

--- a/src/app/receipt-items/receipt-items.component.scss
+++ b/src/app/receipt-items/receipt-items.component.scss
@@ -4,8 +4,11 @@
   align-items: end;
 }
 
-mat-card {
-  max-width: 350px;
+mat-panel-title {
+  width: 50%;
+  white-space: nowrap;
+  overflow: hidden;
+  // text-overflow: ellipsis;
 }
 
 mat-form-field {
