--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -13,6 +13,7 @@ button {
   display: grid;
   grid-template-columns: 200px auto;
   align-items: end;
+  margin-bottom: 20px;
 }
 
 mat-form-field {
