--- a/src/app/receipt-items/receipt-items.component.html
+++ b/src/app/receipt-items/receipt-items.component.html
@@ -118,6 +118,7 @@
 <button
   class="calculate-button"
   mat-flat-button
+  matStepperNext
   color="primary"
   (click)="calculate()"
   [disabled]="items.length === 0"
