--- a/src/app/receipt-items/receipt-items.component.html
+++ b/src/app/receipt-items/receipt-items.component.html
@@ -106,9 +106,10 @@
         </mat-select>
       </mat-form-field>
       <button
-        mat-button
+        mat-flat-button
         (click)="addPayerToItem(iOfItems, personInput, personInput)"
         [disabled]="personInput.empty"
+        color="accent"
       >
         Add Payer
       </button>
