--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         matStepperNext
         [disabled]="!moreThan0People()"
       >
-        Input Items
+        Next: Input Items
       </button>
     </mat-step>
 
@@ -22,7 +22,9 @@
       <mat-table [dataSource]="amountToPay">
         <ng-container matColumnDef="name">
           <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
+          <mat-cell class="large-font" *matCellDef="let element">{{
+            element.name
+          }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="items">
@@ -36,7 +38,7 @@
 
         <ng-container matColumnDef="amount">
           <mat-header-cell *matHeaderCellDef>Amount Due</mat-header-cell>
-          <mat-cell *matCellDef="let element"
+          <mat-cell class="large-font" *matCellDef="let element"
             >£{{ element.amount | number: '1.2-2' }}</mat-cell
           >
         </ng-container>
