--- a/src/app/dialog-already-exists/dialog-already-exists.component.html
+++ b/src/app/dialog-already-exists/dialog-already-exists.component.html
@@ -1,3 +1,3 @@
-<h2 mat-dialog-title>Already Exists</h2>
-<mat-dialog-content>{{ data }} already in the list.</mat-dialog-content>
-<button mat-button mat-dialog-close>Close</button>
+<h2 mat-dialog-title>{{ headerMessage }}</h2>
+<mat-dialog-content>{{ message }} </mat-dialog-content>
+<button mat-button mat-dialog-close>{{ buttonMessage }}</button>
