Stop error messages after entering info in forms

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -26,7 +26,7 @@
   <button
     mat-flat-button
     color="primary"
-    (click)="addPerson(name)"
+    (click)="addPerson(name, nameInput)"
     [disabled]="nameInput.invalid"
   >
     Add Person
