Call Firebase to fetch list of names

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -32,6 +32,10 @@
     Add Person
   </button>
 
+  <button mat-flat-button color="primary" (click)="fetchNames()">
+    Fetch Names
+  </button>
+
   <button
     mat-flat-button
     color="warn"
