--- a/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.html
+++ b/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.html
@@ -1,3 +1,31 @@
-<ul>
-  <li *ngFor="let name of data">{{ name }}</li>
-</ul>
+<div class="both-arrays">
+  <mat-list
+    cdkDropList
+    [cdkDropListData]="data"
+    (cdkDropListDropped)="drop($event)"
+    [cdkDropListConnectedTo]="chosenNamesRef"
+    #allNamesRef="cdkDropList"
+  >
+    <mat-list-item cdkDrag *ngFor="let name of data">
+      {{ name }}
+    </mat-list-item>
+  </mat-list>
+
+  <mat-divider [vertical]="true"></mat-divider>
+  <div class="middle">Drag Names to the Right to Select</div>
+  <mat-divider [vertical]="true"></mat-divider>
+
+  <mat-list
+    cdkDropList
+    [cdkDropListData]="selectedNames"
+    (cdkDropListDropped)="drop($event)"
+    [cdkDropListConnectedTo]="allNamesRef"
+    #chosenNamesRef="cdkDropList"
+  >
+    <mat-list-item cdkDrag *ngFor="let name of selectedNames">
+      {{ name }}
+    </mat-list-item>
+  </mat-list>
+</div>
+
+<button mat-flat-button color="primary" (click)="onClick()">OK</button>
