Selected names via Firebase shows up on list

--- a/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.scss
+++ b/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.scss
@@ -13,6 +13,11 @@ mat-list-item {
   text-align: center;
 }
 
+mat-icon {
+  display: block;
+  margin: auto;
+}
+
 button {
   display: block;
   min-width: 100px;
