--- a/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.html
+++ b/src/app/drag-drop-bottom-sheet/drag-drop-bottom-sheet.component.html
@@ -12,7 +12,10 @@
   </mat-list>
 
   <mat-divider [vertical]="true"></mat-divider>
-  <div class="middle">Drag Names to the Right to Select</div>
+  <div class="middle">
+    <mat-icon aria-hidden="false">arrow_right_alt</mat-icon>
+    Drag Names to the Right to Select
+  </div>
   <mat-divider [vertical]="true"></mat-divider>
 
   <mat-list
