--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,9 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   background: #292929;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 0px;
+  }
+}
