--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,11 @@ ul {
 .large-font {
   font-size: 16px;
 }
+
+.mat-column-name {
+  max-width: 130px;
+}
+
+.mat-column-amount {
+  max-width: 80px;
+}
